2011-04-24  James Youngman  <jay@gnu.org>

	Tell the user to run "bootstrap" instead of "autogen.sh".
	* README: "autogen.sh" has been replaced by "bootstrap".

	Adopt Automake's "gnits" rules.
	* configure.ac: Use the "gnits" rules.
	* docs/CREDITS: Rename to THANKS to comply with the gnits rules.
	* docs/CREDITS.short.txt: Add missing final newline.

	Modernise configure.ac initialisation.
	* configure.ac: Use the new-style Autoconf/Automake initialisation
	which passes the version number to AC_INIT rather than to
	AM_INIT_AUTOMAKE.

	Update the version number.
	* configure.ac: Update version number to make a distinction
	between the tar file which results form "make dist" and the
	released 1.3.0 tar file.
	* NEWS: Similarly update the version number.

	Fix SF bug #1300722 (prs succeeds even if the SID is not found).
	* tests/prs/wrongsid.sh: New file; tests for "prs -r" when the
	specified SID does not exist.
	* tests/prs/default.sh: New file; tests the default behaviour of
	prs, both with -d and with no options at all.
	* tests/prs/cutoff.sh: New file; tests for "prs -e" and "prs -l".
	* src/prs.cc (main): Add a comment pointing out that specifying -d
	changes the default behaviour around which deltas are selected.
	* src/sf-prs.cc (prs): return a failure status if a SID was
	specified but not matched.
	* NEWS: mention this bugfix.

2011-04-22  Yann Dirson  <dirson@debian.org>  (tiny change)

	Fix SourceForge bug #1317916.
	* bsd/sccs.1: Avoid a groff warning in sccs.1 by removing some
	unnecessary blank lines.

2010-11-07  James Youngman  <jay@gnu.org>

	Prepare to release 1.3.0.
	* configure.ac (AM_INIT_AUTOMAKE): Update the version number.
	This release is otherwise identical to 1.3.0rc1.
	* NEWS: Mention this.

2010-05-16  James Youngman  <jay@gnu.org>

	Prepare to release 1.3.0rc1.
	* NEWS: Update version to 1.3.0rc1
	* configure.ac: Update version to 1.3.0rc1
	* docs/cssc.texi: Update VERSION, EDITION and last-update time.
